[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/entities/objects/Pickup.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fading"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.59618, 3.46441 )

[sub_resource type="CircleShape2D" id=4]
radius = 25.0

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/fading = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="PickupArea" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="DetectPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 4 )

[node name="StartFadingOut" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Erase" type="Timer" parent="."]
wait_time = 14.0
autostart = true
[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="timeout" from="StartFadingOut" to="." method="_on_StartFadingOut_timeout"]
[connection signal="timeout" from="Erase" to="." method="_on_Erase_timeout"]
